@@ -10,7 +10,7 @@ ol { list-style: none; margin: 0; padding: 0; }
 ol ol { margin-left: 2em; list-position: outside; }
 .running { text-decoration: underline; }
 .ran { color: grey; }
-nav { position: absolute; right: 10px; max-height: 600px; }
+nav { position: absolute; right: 10px; height: 600px; }
 nav > ol { height: 100%; overflow-y: scroll; }
 </style>
 </head>
