@@ -1,5 +1,17 @@
 2017-05-19  Ryosuke Niwa  <rniwa@webkit.org>
 
+        Speedometer 2.0: Angular v1 test only deletes the second item
+        https://bugs.webkit.org/show_bug.cgi?id=172353
+
+        Reviewed by Antti Koivisto.
+
+        Like jQuery and Inferno, run querySelector after removing each todo item.
+
+        * Speedometer/InteractiveRunner.html: Tweaked CSS again.
+        * Speedometer/resources/tests.js:
+
+2017-05-19  Ryosuke Niwa  <rniwa@webkit.org>
+
         Speedometer 2.0: Elem test isn't updating DOM during the measurement
         https://bugs.webkit.org/show_bug.cgi?id=172343
 
